FIX: added alt attributo images

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
         <h2>Some random information.</h2>
         <div class="images">
             <div class="imgtext">
-                <img src="/Pictures/Quote1.jpg" class="q-img">
+                <img src="/Pictures/Quote1.jpg" class="q-img" alt="Quote1">
                 <div class="text">Life wisdom number 1</div>
             </div>
             <div class="imgtext">
-                <img src="/Pictures/Quote2.jpg" class="q-img">
+                <img src="/Pictures/Quote2.jpg" class="q-img" alt="Quote2">
                 <div class="text">Life wisdom number 2</div>
             </div>
             <div class="imgtext">
-                <img src="Pictures/Quote3.jpg" class="q-img">
+                <img src="Pictures/Quote3.jpg" class="q-img" alt="Quote3">
                 <div class="text">Life wisdom number 3</div>
             </div>
             <div class="imgtext">
-                <img src="Pictures/Quote4.jpg" class="q-img">
+                <img src="Pictures/Quote4.jpg" class="q-img" alt="Quote4">
                 <div class="text">Life wisdom number 4</div>
             </div>
         </div>   
